# beeline-interpreter

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  Sanitizers.cmake  Tests.cmake  beeline.nix  demo  flake.nix  presentation.url
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  beeline.cpp  cli.cpp  cli.hpp
benchmark/basic-exponential-smoothing/: smoothing.py  smoothing.txt
benchmark/fibonacci/: fibonacci.py  fibonacci.txt
doc/: grammar.md
example/: CMakeLists.txt  arithmetic.txt  comments.txt  comparisons.txt  concatenation.txt  conditionals.txt  fibonacci.txt  logical_operators.txt  precedence.txt  scope.txt  variables.txt  while_loops.txt
include/: beeline.hpp  logging.hpp
scripts/: ast_metaprogrammer.py  generate_ast.py
src/: CMakeLists.txt  ast.cpp  ast.hpp  beeline.cpp  beeline.hpp  cli.cpp  cli.hpp  environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  logging.cpp  logging.hpp  main.cpp  parser.cpp  parser.hpp  replace.hpp  stringify.cpp  stringify.hpp
src/ast/: ast.cpp  ast.hpp  stringify.cpp  stringify.hpp  visitor.cpp  visitor.hpp
test/: CMakeLists.txt
test/unit/: test.cpp  test_ast.cpp  test_lexer.cpp
test/unit/ast/: test_ast.cpp
